# maja_gitlab

./: .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  LICENSE  LICENSE.md  README.md  launch-generation-package.sh  maja_env_collect.sh
Code/: CMakeLists.txt
Code/Algorithms/: CMakeLists.txt
Code/Algorithms/Common/: CMakeLists.txt  vnsBenchRH7Filter.h  vnsBenchRH7Filter.txx  vnsBinaryConcatenationVectorImageFilter.h  vnsBinaryConcatenationVectorImageFilter.txx  vnsBinaryLogicalOrFunctor.h  vnsBinaryThresholdVectorImageFilter.h  vnsBinaryThresholdVectorImageFilter.txx  vnsBinaryToVectorImageFilter.h  vnsBinaryToVectorImageFilter.txx  vnsChangeValueFunctor.h  vnsChangeValueVectorFunctor.h  vnsChangeValueWithMaskFunctor.h  vnsChangeValueWithMaskVectorFunctor.h  vnsCloudMaskUndersamplingInterpolateImageFunction.h  vnsCloudMaskUndersamplingInterpolateImageFunction.txx  vnsConcatenatePerZoneVectorImageFilter.h  vnsConcatenatePerZoneVectorImageFilter.txx  vnsConfigCommonParameters.cxx  vnsConfigCommonParameters.h  vnsConstantImageSource.h  vnsConstantImageSource.txx  vnsConstantPadVectorImageFilter.h  vnsConstantPadVectorImageFilter.txx  vnsConstantVectorImageSource.h  vnsConstantVectorImageSource.txx  vnsConvolutionVectorImageFilter.h  vnsConvolutionVectorImageFilter.txx  vnsDedicatedFastResampleImageFilter.h  vnsDedicatedFastResampleImageFilter.txx  vnsDedicatedPadAndFastResampleImageFilter.h  vnsDedicatedPadAndFastResampleImageFilter.txx  vnsDispatchZoneVectorImageFilter.h  vnsDispatchZoneVectorImageFilter.txx  vnsEqualValueThresholdFunctor.h  vnsExpandThresholdImageFilter.h  vnsExpandThresholdImageFilter.txx  vnsExpandThresholdVectorImageFilter.h  vnsExpandThresholdVectorImageFilter.txx  vnsFastLinearInterpolateImageFunction.h  (+54 more)
Code/Algorithms/L2/: CMakeLists.txt
Code/Algorithms/L2/AOTEstimation/: CMakeLists.txt  vnsAOTCostFunctionBase.h  vnsAOTCostFunctionBase.txx  vnsCommandIterationUpdateLevenbergMarquardt.h  vnsDarkestPixelAOTCalculator.h  vnsDarkestPixelAOTCalculator.txx  vnsMultiSpectralAOTCostFunction.h  vnsMultiSpectralAOTCostFunction.txx  vnsMultiSpectralAOTMethodFunctions.h  vnsMultiSpectralAOTMethodFunctions.txx  vnsMultiSpectralComputeAOTImageFilter.h  vnsMultiSpectralComputeAOTImageFilter.txx  vnsMultiTemporalAOTCostFunction.h  vnsMultiTemporalAOTCostFunction.txx  vnsMultiTemporalAOTMethodFunctions.h  vnsMultiTemporalAOTMethodFunctions.txx  vnsMultiTemporalAOTMethodThresholdsGenerator.h  vnsMultiTemporalAOTMethodThresholdsGenerator.txx  vnsMultiTemporalComputeAOTImageFilter.h  vnsMultiTemporalComputeAOTImageFilter.txx  vnsRunLevenbergMarquardtOptimization.h  vnsRunLevenbergMarquardtOptimization.txx  vnsSpectroTemporalAOTCostFunction.h  vnsSpectroTemporalAOTCostFunction.txx  vnsSpectroTemporalComputeAOTImageFilter.h  vnsSpectroTemporalComputeAOTImageFilter.txx
Code/Algorithms/L2/AtmosphericAbsorptionCorrection/: CMakeLists.txt  vnsAtmosphericAbsorptionCorrectionImageFilter.cxx  vnsAtmosphericAbsorptionCorrectionImageFilter.h  vnsPressureFunctor.h  vnsSmacCoefContainer.cxx  vnsSmacCoefContainer.h  vnsTOACorrectionImageFilter.h  vnsTOACorrectionImageFilter.txx  vnsTOACorrectionImageFunctor.h  vnsWaterAmountImageGenerator.h  vnsWaterAmountImageGenerator.txx  vnsWaterVaporPostProcessingImageFilter.cxx  vnsWaterVaporPostProcessingImageFilter.h
Code/Algorithms/L2/CirrusCorrection/: CMakeLists.txt  vnsCirrusCorrectionApplyImageFilter.h  vnsCirrusCorrectionApplyImageFilter.txx  vnsCirrusMultiMeanStatisticsVectorImageFilter.h  (+2 more)
Code/Core/: CMakeLists.txt  majaenv.sh.in  script.sh.in
Code/Core/Applications/: CMakeLists.txt
Code/Core/Data/: CMakeLists.txt
Code/Core/TestHelperLibrary/: CMakeLists.txt  LAUNCHER.processing.bash.cmake.in  vnsDataManagerTestingLibrary.cxx  vnsDataManagerTestingLibrary.h  vnsDummyProgram.cxx  vnsStreamingDifferenceImageFilter.h  vnsStreamingDifferenceImageFilter.txx  vnsTestHelper.cxx  vnsTestHelper.h  vnsTestMain.h  vnsTestMainLauncher.cxx
Doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.config.in  DoxyfileLight  DoxyfileLightOTB  DoxyfileWithoutITK
Packaging/: CMakeLists.txt  PackageGlobals.cmake  check_cmake_variables.cmake  create_package.cmake  detect_using_file_command.cmake  install_rule.cmake  install_share_dirs.cmake  installer_files.cmake  prepare_file_list.cmake  update_make_symlinks_script.cmake  validation_files.cmake
Packaging/Files/: CMakeLists.txt  README  linux_pkgsetup.in  vnsDummyProgram.sh  vnsTestMainLauncher.sh
Plugins/Common/: CMakeLists.txt
Plugins/Common/Interfaces/: CMakeLists.txt
Testing/TU/: CMakeLists.txt
Testing/TU/Code/: CMakeLists.txt
Testing/TU/StartMaja/: CMakeLists.txt
Testing/TU/Utilities/: CMakeLists.txt  vnsIntersector3DTest.cxx  vnsIntersector3DTestBuffer.cxx  vnsIntersector3DTestBufferWithOTB.cxx  vnsUtilitiesTests.cxx
Testing/TU/orchestrator/: CMakeLists.txt
Testing/TV/: CMakeLists.txt
Testing/TV/CROSS_WRITING/: CMakeLists.txt
Testing/TV/SENTINEL2/: CMakeLists.txt
Testing/TV/SENTINEL2_MUSCATE/: CMakeLists.txt
Testing/TV/START_MAJA/: CMakeLists.txt  folders.txt.in
Testing/TV/VENUS_MUSCATE/: CMakeLists.txt
Testing/TVA/: CMakeLists.txt
Testing/TVA/AOTEstimation/: CMakeLists.txt
Testing/TVA/AthmosphericAbsorption/: CMakeLists.txt
Testing/TVA/CirrusCorrection/: CMakeLists.txt
Testing/TVA/CirrusFlag/: CMakeLists.txt
Testing/TVA/CirrusMask/: CMakeLists.txt
Testing/TVA/CloudMasking/: CMakeLists.txt
Testing/TVA/Common/: CMakeLists.txt
Testing/TVA/Composite/: CMakeLists.txt
Testing/TVA/DTMProcessing/: CMakeLists.txt
Testing/TVA/EnvCorrection/: CMakeLists.txt
Testing/TVA/OTBApplications/: CMakeLists.txt
Testing/TVA/RayleighCorrection/: CMakeLists.txt
Testing/TVA/ReduceLutComputation/: CMakeLists.txt
Testing/TVA/ScatteringCorrection/: CMakeLists.txt
Testing/TVA/SlopeCorrection/: CMakeLists.txt
Testing/TVA/SnowMask/: CMakeLists.txt
Testing/TVA/WaterMask/: CMakeLists.txt
Testing/TVA/WaterVaporPostProcessing/: CMakeLists.txt
Utilities/: CMakeLists.txt
Utilities/I3D/: CMakeLists.txt  MntIntersecteur.h  Verbeux.h
(+999 files in other folders)
