############################################################################################################
#                                                                                                          #
#                                        __  __    __     ____   __                                        #
#                                       (  \/  )  /__\   (_  _) /__\                                       #
#                                        )    (  /(__)\ .-_)(  /(__)\                                      #
#                                       (_/\/\_)(__)(__)\____)(__)(__)                                     #
#                                                                                                          #
#                                                                                                          #
############################################################################################################
#                                                                                                          #
# Author: CS Systemes d'Information  (France)                                                              #
#                                                                                                          #
############################################################################################################
# HISTORIQUE                                                                                               #
#                                                                                                          #
# VERSION : 2-0-0 : DM : LAIG-DM-MAC-146-CNES : 14 octobre 2011 : Modification pour prise en compte             #
#                                                            d'evolutions liees a MACCS                    #
#                                                                                                          #
# VERSION : 1-0-0 : <TypeFT> : <NumFT> : 25 mai 2009 : Creation                                                           
#                                                                                                          #
# FIN-HISTORIQUE                                                                                           #
#                                                                                                          #
# $Id$
#                                                                                                          #
############################################################################################################

#-----------------------------------------------------------------------------
# Add utilities subdirectories 
ADD_SUBDIRECTORY(I3D)

#-----------------------------------------------------------------------------
# Install the UseMAJA.cmake file configured from the top-level.
IF(NOT MAJA_INSTALL_NO_DEVELOPMENT)
  INSTALL(FILES ${PROJECT_BINARY_DIR}/Utilities/MAJAConfig.cmake
    DESTINATION ${MAJA_INSTALL_PACKAGE_DIR}
    COMPONENT Development)
ENDIF(NOT MAJA_INSTALL_NO_DEVELOPMENT)


