############################################################################################################
#                                                                                                          #
#                                ooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo         #
#                             o                                                                            #
#                          o                                                                               #
#                        o                                                                                 #
#                      o                                                                                   #
#                     o       ooooooo       ooooooo    o         o      oo                                 #
#    o              o       o        o     o       o   o         o     o   o                               #
#      o           o       o          o   o         o  o         o    o      o                             #
#        o        o       o           o   o         o  o         o    o        o                           #
#         o      o        o      oooo     o         o  o         o   o           o                         #
#          o    o          o              o         o  o         o   o           o                         #
#           o  o            o             o         o  o o      o   o          o                           #
#            oo              oooooooo    o         o   o  oooooo   o      oooo                             #
#                                                     o                                                    #
#                                                     o                                                    #
#                                                    o                            o                        #
#                                                    o            o      oooo     o   o      oooo          #
#                                                   o             o         o    o    o         o          #
#                                                   o            o       ooo     o   o       ooo           #
#                                                               o       o       o   o          o           #
#                                                               ooooo   oooo    o   ooooo  oooo            #
#                                                                              o                           #
#                                                                                                          #
############################################################################################################
#                                                                                                          #
# Author: CS Systemes d'Information  (France)                                                              #
#                                                                                                          #
############################################################################################################
# HISTORIQUE                                                                                               #
#                                                                                                          #
# VERSION : 2-0-0 : DM : LAIG-DM-MAC-146-CNES : 14 octobre 2011 : Modification pour prise en compte             #
#                                                            d'evolutions liees a MACCS                    #
#                                                                                                          #
# VERSION : 1-0-0 : <TypeFT> : <NumFT> : 01 avril 2009 : Creation                                                           
#                                                                                                          #
# FIN-HISTORIQUE                                                                                           #
#                                                                                                          #
# $Id$
#                                                                                                          #
############################################################################################################
#-----------------------------------------------------------------------------
# Add libraries subdirectories 
#ADD_SUBDIRECTORY(AOTEstimation)
ADD_SUBDIRECTORY(AtmosphericAbsorptionCorrection)
#ADD_SUBDIRECTORY(CirrusCorrection)
#ADD_SUBDIRECTORY(CirrusFlag)
#ADD_SUBDIRECTORY(CirrusMask)
#ADD_SUBDIRECTORY(CloudMasking)
ADD_SUBDIRECTORY(CompositeImage)
#ADD_SUBDIRECTORY(DTMProcessing)
#ADD_SUBDIRECTORY(EnvironmentCorrection)
#ADD_SUBDIRECTORY(GeometricFlags)
#ADD_SUBDIRECTORY(RainDetection)
ADD_SUBDIRECTORY(RayleighCorrection)
#ADD_SUBDIRECTORY(ReduceLutComputation)
#ADD_SUBDIRECTORY(ScatteringCorrection)
#ADD_SUBDIRECTORY(SlopeCorrection)
#ADD_SUBDIRECTORY(SnowMasking)
#ADD_SUBDIRECTORY(Subsampling)
#ADD_SUBDIRECTORY(WaterMasking)

